--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,9 @@
 layout: default
 ---
     <!-- <h2>About</h2> -->
-    <p>I'm a software engineer with extra interests in machatronics and beyond, picking up chess and competitive programming as hobbies recently (2023-12)</p>
+    <p>I'm a software engineer with extra interests in mechatronics and beyond, picking up chess and competitive programming as hobbies recently (2023-12)
+       email: hzhaoconnor@gmail.com
+    </p>
     <p><a href='https://leetcode.com/hzhaoc/'>leetcode profile</a></p>
     <p><a href='https://github.com/hzhaoc/'>github profile</a></p>
 </div>
