--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,7 @@ layout: default
     <p>I'm a software engineer with extra interests in mechatronics and beyond, picking up chess and competitive programming as hobbies recently (2023-12).
        email: hzhaoconnor@gmail.com
     </p>
-    <p><a href='https://leetcode.com/hzhaoc/'>leetcode profile</a></p>
-    <p><a href='https://github.com/hzhaoc/'>github profile</a></p>
+    <p><a href='https://leetcode.com/hzhaoc/'>leetcode</a></p>
+    <p><a href='https://github.com/hzhaoc/'>github</a></p>
+    <p><a href="https://www.zhihu.com/people/connor-44-22">知乎</a></p>
 </div>
