--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
     <!-- <h2>About</h2> -->
     <p>I'm a software engineer with extra interests in mechatronics and beyond, picking up chess and competitive programming as hobbies recently (2023-12).
-       In addition to "boring" textbooks, I occasionally read bios, watch podcast (Lex fan here), and other forms of personal work - people's wisdom in general passed down in history
+       Besides "boring" textbooks, I occasionally read bios, watch podcast (Lex fan here), and other forms of personal work - people's wisdom in general passed down in history.
     </p>
     <p>email: hzhaoconnor@gmail.com</p>
     <p><a href='https://leetcode.com/hzhaoc/'>leetcode</a></p>
