--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@ layout: default
     <p>I'm a software engineer with extra interests in mechatronics and beyond, picking up chess and competitive programming as hobbies recently (2023-12).
        Besides "boring" textbooks, I occasionally read bios, watch podcast (Lex fan here), and other forms of personal work - people's will and wisdom passed down in history.
        I stopped my privat pilot training early this 2023 because I just didn't have enough energy on weekends to do it at the time. So I swtiched to running. 
-       I intend to go back when the time is right. The sky is beautiful.
+       I intend to go back when the time is right. I made a good friend there and the sky is beautiful.
     </p>
     <p>email: hzhaoconnor@gmail.com</p>
     <p><a href='https://leetcode.com/hzhaoc/'>leetcode</a></p>
