--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@ layout: default
     <p>I'm a software engineer with extra interests in mechatronics and beyond, picking up chess and competitive programming as hobbies recently (2023-12).
        Besides "boring" textbooks, I occasionally watch podcast (Lex fan here), read other people's bios, teachings or philosophies whispered in books.
        I stopped my privat pilot training early this 2023 because I just didn't have enough energy on weekends to do it at the time. 
-       I intend to go back - I made a good friend there and the sky is beautiful.
+       I intend to go back - I made a friend there and the sky is beautiful.
     </p>
     <p>email: hzhaoconnor@gmail.com</p>
     <p><a href='https://leetcode.com/hzhaoc/'>leetcode</a></p>
