--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@ layout: default
     <!-- <h2>About</h2> -->
     <p>I'm a software engineer with extra interests in mechatronics and beyond, picking up chess and competitive programming as hobbies recently (2023-12).
        Besides "boring" textbooks, I occasionally watch podcast (Lex fan here), read other people's bios, teachings or philosophies whispered in books.
-       I stopped my privat pilot training in early 2023 because of time constraint but intend to go back - the sky is beautiful.
+       I stopped my private pilot training in early 2023 because of time constraint but intend to go back - the sky is beautiful.
     </p>
     <p>email: hzhaoconnor@gmail.com</p>
     <p><a href='https://leetcode.com/hzhaoc/'>leetcode</a></p>
