--- a/about/index.html
+++ b/about/index.html
@@ -6,6 +6,7 @@ layout: default
        Besides "boring" textbooks, I occasionally watch podcast (Lex fan here), read other people's bios, teachings or philosophies whispered in books.
        I stopped my private pilot training in early 2023 because of time constraint but intend to go back - the sky is beautiful.
     </p>
+    <p>2024, I'm trying to be a better person</p>
     <p>email: hzhaoconnor@gmail.com</p>
     <p><a href='https://leetcode.com/hzhaoc/'>leetcode</a></p>
     <p><a href='https://github.com/hzhaoc/'>github</a></p>
