--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
     <!-- <h2>About</h2> -->
-    <p>I'm a software engineer with overflowed interests in mechatronics, commercial space and beyond, picking up chess and competitive programming as hobbies recently (2023-12).
+    <p>I'm a software engineer with overflowed interests in mechatronics, commercial space and beyond, picking up chess and competitive programming as games recently (2023-12).
        Besides "boring" textbooks, I occasionally watch podcast (Lex fan here), read other people's bios, teachings or philosophies whispered in books.
        I stopped my private pilot training in early 2023 because of time constraint but intend to go back - the sky is beautiful.
     </p>
