--- a/about/index.html
+++ b/about/index.html
@@ -3,10 +3,9 @@ layout: default
 ---
     <!-- <h2>About</h2> -->
     <p>I'm a software engineer with overflowed interests in mechatronics, commercial space and beyond, picking up chess and competitive programming as games recently (2023-12).
-       Besides "boring" textbooks, I occasionally watch podcast (Lex fan here), read other people's bios, teachings or philosophies whispered in books.
-       I stopped my private pilot training in early 2023 because of time constraint but intend to go back - the sky is beautiful.
+       Besides "boring" textbooks, I occasionally read bios, or any other forms of people's lifetime wisdom - anything that tries to be convery meanings.
+       I stopped my private pilot training in early 2023 but intend to go back - the sky is beautiful.
     </p>
-    <p>2024, I'm trying to be a better person</p>
     <p>email: hzhaoconnor@gmail.com</p>
     <p><a href='https://leetcode.com/hzhaoc/'>leetcode</a></p>
     <p><a href='https://github.com/hzhaoc/'>github</a></p>
