--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
     <!-- <h2>About</h2> -->
     <p>I'm a software engineer with overflowed interests in mechatronics, commercial space and beyond, picking up chess and competitive programming as games recently (2023-12).
-       Besides "boring" textbooks, I occasionally watch podcast (Lex fan here), read people's bios or other forms of lifetime wisdom.
+       Besides keeping "boring" textbooks, I occasionally watch podcast (Lex fan here), read people's bios or other forms of lifetime wisdom.
        I stopped my private pilot training in early 2023 but intend to go back - the sky is refreshing.
     </p>
     <p>email: hzhaoconnor@gmail.com</p>
