--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
     </a>
   </h2>
   
-  <p>{{ post.excerpt | strip_html | truncate: 100 }}</p>
+  <p>{{ post.brief | strip_html | truncate: 100 }}</p>
 </section>
 {% endfor %}
 
