--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ layout: default
 {% for post in paginator.posts %}
 <section>
   <h2>
-    <div id="href">
+    <div id="class">
       <a href='{{ site.url }}{{ post.url }}' title='{{ post.title }}' style="text-decoration:none">
         {{ post.title }}
       </a>
-    </div>>
+    </div>
   </h2>
   
   <p>{{ post.brief | strip_html | truncate: 100 }}</p>
