--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 <section>
   <h2>
     <div id="class">
-      <a href='{{ site.url }}{{ post.url }}' title='{{ post.title }}' style="text-decoration:none">
+      <a href='{{ site.url }}{{ post.url }}' title='{{ post.title }}' style="text-decoration:none;color:black;">
         {{ post.title }}
       </a>
     </div>
