--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@ layout: default
 
 {% for post in paginator.posts %}
 <section>
+  <style>
+    a:link    {color:#000;}  /* unvisited link  */
+    a:visited {color:#800;}  /* visited link    */
+    a:hover   {color:#000;}  /* mouse over link */
+    a:active  {color:#000;}  /* selected link   */ 
+  </style>
   <h2>
     <div id="class">
-      <a href='{{ site.url }}{{ post.url }}' title='{{ post.title }}' style="text-decoration:none;color:black;">
+      <a href='{{ site.url }}{{ post.url }}' title='{{ post.title }}' style="text-decoration:none;">
         {{ post.title }}
       </a>
     </div>
