--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@ layout: default
 {% for post in paginator.posts %}
 <section>
   <style>
-    a:link    {color:#000;}  /* unvisited link  */
-    a:visited {color:#800;}  /* visited link    */
-    a:hover   {color:#000;}  /* mouse over link */
-    a:active  {color:#000;}  /* selected link   */ 
+    a:link    {color:#000;text-decoration:none}  /* unvisited link  */
+    a:visited {color:#800;text-decoration:none}  /* visited link    */
+    a:hover   {color:#000;text-decoration:none}  /* mouse over link */
+    a:active  {color:#000;text-decoration:none}  /* selected link   */ 
   </style>
   <h2>
     <div id="class">
-      <a href='{{ site.url }}{{ post.url }}' title='{{ post.title }}' style="text-decoration:none;">
+      <a href='{{ site.url }}{{ post.url }}' title='{{ post.title }}'>
         {{ post.title }}
       </a>
     </div>
