--- a/about/index.html
+++ b/about/index.html
@@ -2,11 +2,31 @@
 layout: default
 ---
     <!-- <h2>About</h2> -->
-    <p>I'm a software engineer with overflowed interests in mechatronics, commercial space and beyond, picking up chess and competitive programming as games recently (2023-12).
-       Besides keeping "boring" textbooks, I occasionally watch podcast (Lex fan here), read people's bios or other forms of lifetime wisdom.
-       I stopped my private pilot training in early 2023 but intend to go back - the sky is refreshing.
+    <p> 
+        I'm a software engineer with overflowed interests in mechatronics, space and beyond.
+        Recently (2023-12) I started picking up chess and competitive programming as games.
+        Besides keeping "boring" textbooks for studies, I occasionally watch podcast (Lex fan here), read people's bios, views and values from books, anything that can inspire me to keep searching for a meaning in the world.
     </p>
+    <p> 
+        I have a Panasonic miniDV from 2000s.
+    </p>
+    <p>
+        Growing up I used to play lots of sports. 
+        Early this 2023 I stopped private pilot training in favor of other plans but intend to go back and get the license. People in the aviation club are cool-minded towards life.
+    </p>
+    <p>
+        I had tried to have raised 6 dogs or so and 1 cat back in China.
+        Most of them are some hybrids of Chinese brand (Tugou) and they are the ones people ignore the most.
+    </p>
+    <p>
+        As of 2020s California is still the symbol of spirit of entrepreneurship, and to some degree the place to find common truth and overpower traditions.
+    </p>
+    <p>
+        In here, there's a mountain I have to climb.
+    </p>
+
     <p>email: hzhaoconnor@gmail.com</p>
+
     <p><a href='https://leetcode.com/hzhaoc/'>leetcode</a></p>
     <p><a href='https://github.com/hzhaoc/'>github</a></p>
     <p><a href="https://www.zhihu.com/people/connor-44-22">知乎</a></p>
