--- a/about/index.html
+++ b/about/index.html
@@ -25,9 +25,9 @@ layout: default
         In here, there's a mountain I have to climb.
     </p>
 
-    <p>email: hzhaoconnor@gmail.com</p>
+    <!-- <p>email: hzhaoconnor@gmail.com</p>
 
     <p><a href='https://leetcode.com/hzhaoc/'>leetcode</a></p>
     <p><a href='https://github.com/hzhaoc/'>github</a></p>
-    <p><a href="https://www.zhihu.com/people/connor-44-22">知乎</a></p>
+    <p><a href="https://www.zhihu.com/people/connor-44-22">知乎</a></p> -->
 </div>
