--- a/about/index.html
+++ b/about/index.html
@@ -24,20 +24,19 @@ layout: default
     <p>
         In here, there's a mountain I have to climb.
     </p>
-    <br>
+    <!-- <br> -->
     <p>
         2023-12-31
     </p>
 
+    <!-- <br>
     <br>
     <br>
     <br>
     <br>
     <br>
-    <br>
-
     <p>email: hzhaoconnor@gmail.com</p>
     <p><a href='https://leetcode.com/hzhaoc/'>leetcode</a></p>
     <p><a href='https://github.com/hzhaoc/'>github</a></p>
-    <p><a href="https://www.zhihu.com/people/connor-44-22">知乎</a></p>
+    <p><a href="https://www.zhihu.com/people/connor-44-22">知乎</a></p> -->
 </div>
