--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@ layout: default
     <p> 
         I'm a software engineer with overflowed interests in mechatronics, space and beyond.
         Recently (2023-12) I started picking up chess and competitive programming as games.
-        Besides keeping "boring" textbooks for studies, I occasionally watch podcast (Lex fan here), read people's bios, views and values from books, anything that can inspire me to keep searching for a meaning in the world.
+        Besides keeping "boring" textbooks for studies, I occasionally watch podcast (Lex fan here), read people's bios, views and values from books, anything that inspires me to find a meaning in the world.
     </p>
     <p> 
         I have a Panasonic miniDV from 2000s.
@@ -19,7 +19,7 @@ layout: default
         Most of them are some hybrids of Chinese brand (Tugou) and they are the ones people ignore the most.
     </p>
     <p>
-        As of 2020s California is still the symbol of spirit of entrepreneurship, and to some degree the place to overpower traditions and find common truth.
+        As of 2020s California still symbolizes entrepreneurship spirit, and to some degree the place to overpower traditions and find common truth.
     </p>
     <p>
         In here, there's a mountain I have to climb.
