--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,7 @@ layout: default
         Most of them are some hybrids of Chinese brand (Tugou) and they are the ones people ignore the most.
     </p>
     <p>
-        As of 2020s California still symbolizes entrepreneurship spirit, and to some degree the place to overpower traditions and find common truth.
+        As of 2020s California is still the symbol of entrepreneurship spirit, and to some degree the place to overpower traditions and find common truth.
     </p>
     <p>
         In here, there's a mountain I have to climb.
