--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,7 @@ layout: default
     </p>
     <p>
         Growing up I used to play lots of sports. 
-        Early this 2023 I stopped private pilot training in favor of other plans but intend to go back and get the license. People in the aviation club are cool-minded towards life.
+        In early 2023 I stopped private pilot training in favor of other plans but intend to go back and get the license. People in the aviation club are cool-minded towards life.
     </p>
     <p>
         I had tried to have raised 6 dogs or so and 1 cat back in China.
