--- a/about/index.html
+++ b/about/index.html
@@ -1,8 +1,11 @@
 ---
 layout: default
 ---
+    <p>
+        I'm hzhaoc. :)
+    </p>
     <!-- <h2>About</h2> -->
-    <p> 
+    <!-- <p> 
         I'm a software engineer with overflowed interests in mechatronics, space and beyond.
         Recently (2023-12) I started picking up chess and competitive programming as games.
         Besides keeping "boring" textbooks for studies, I occasionally watch podcast (Lex fan here), read people's bios, views and values from books, anything that inspires me to find a meaning in the world.
@@ -23,7 +26,7 @@ layout: default
     </p>
     <p>
         In here, there's a mountain I have to climb.
-    </p>
+    </p> -->
     <!-- <br> -->
     <p>
         2023-12-31
