--- a/other/index.html
+++ b/other/index.html
@@ -2,22 +2,24 @@
 layout: default
 ---
 
-{% for post in paginator.others %}
-<section>
-  <style>
-    a:link    {color:#000;text-decoration:none}  /* unvisited link  */
-    a:visited {color:#800;text-decoration:none}  /* visited link    */
-    a:hover   {color:#000;text-decoration:none}  /* mouse over link */
-    a:active  {color:#000;text-decoration:none}  /* selected link   */ 
-  </style>
-  <h2>
-      <a href='{{ site.url }}{{ post.url }}' title='{{ post.title }}'>
-        {{ post.title }}
-      </a>
-  </h2>
-  
-  <p>{{ post.brief | strip_html | truncate: 100 }}</p>
-</section>
+{% for post in paginator.posts %}
+  {% if post.layout == other %}
+    <section>
+      <style>
+        a:link    {color:#000;text-decoration:none}  /* unvisited link  */
+        a:visited {color:#800;text-decoration:none}  /* visited link    */
+        a:hover   {color:#000;text-decoration:none}  /* mouse over link */
+        a:active  {color:#000;text-decoration:none}  /* selected link   */ 
+      </style>
+      <h2>
+          <a href='{{ site.url }}{{ post.url }}' title='{{ post.title }}'>
+            {{ post.title }}
+          </a>
+      </h2>
+      
+      <p>{{ post.brief | strip_html | truncate: 100 }}</p>
+    </section>
+  {% endif %}
 {% endfor %}
 
 {% if paginator.previous_page %}
