--- a/other/index.html
+++ b/other/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 {% for post in paginator.posts %}
-  {% if post.layout == "other" %}
+  {% if post.layout == "post" %}
     <section>
       <style>
         a:link    {color:#000;text-decoration:none}  /* unvisited link  */
