--- a/other/index.html
+++ b/other/index.html
@@ -7,4 +7,15 @@ layout: default
     <p>
         2024-02-11
     </p>
+
+    <p>
+      The totem
+      The monument
+      The birthday
+      The immortal faith
+   </p>
+  <p>
+      2024-02-11
+  </p>
+
 </div>
