--- a/other/index.html
+++ b/other/index.html
@@ -1,19 +1,17 @@
 ---
 layout: default
 ---
-    <p>
-        The world, Chico. And everything in it...
-    </p>
-    <p>
-        2024-02-11
-    </p>
+  <p>
+      The world, Chico. And everything in it...
+  </p>
+  <p>
+      2024-02-11
+  </p>
 
-    <p>
-      The totem
-      The monument
-      The birthday
-      The immortal faith
-   </p>
+  <br>
+  <p>
+    The totem; The monument; The birthday.
+  </p>
   <p>
       2024-02-11
   </p>
