--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
     <p>
-        I'm hzhaoc. :)
+        Hi welcome to Hua Zhao's personal webpage.
     </p>
     <!-- <h2>About</h2> -->
     <!-- <p> 
