--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
     <p>
-        Hi welcome to Hua Zhao's personal webpage.
+        Hi I'm hzhaoc.
     </p>
     <!-- <h2>About</h2> -->
     <!-- <p> 
@@ -28,11 +28,11 @@ layout: default
         In here, there's a mountain I have to climb.
     </p> -->
     <!-- <br> -->
-    <p>
+    <!-- <p>
         2023-12-31
-    </p>
+    </p> -->
 
-    <!-- <br>
+    <br>
     <br>
     <br>
     <br>
@@ -41,5 +41,5 @@ layout: default
     <p>email: hzhaoconnor@gmail.com</p>
     <p><a href='https://leetcode.com/hzhaoc/'>leetcode</a></p>
     <p><a href='https://github.com/hzhaoc/'>github</a></p>
-    <p><a href="https://www.zhihu.com/people/connor-44-22">知乎</a></p> -->
+    <p><a href="https://www.zhihu.com/people/connor-44-22">知乎</a></p>
 </div>
